@@ -1,3 +1,8 @@
+2015-04-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* builtin.c (do_strftime): Use a double for the timestamp and
+	check that the value is within range for a time_t.
+
 2015-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* builtin.c (do_strftime): Restore checking for negative result and
